--- a/data/en/homepage.yaml
+++ b/data/en/homepage.yaml
@@ -55,7 +55,7 @@ features:
 promo:
   enable : true
   image : "images/kimberly-eschenbauch-03Eu7zSySPo-unsplash.jpg"
-  title : "Artesan stained glass window design."
+  title : "Artisan stained glass window design."
   content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vel labore, deleniti minima
             nisi, velit atque quaerat impedit ea maxime sunt accusamus at obcaecati dolor iure iusto omnis quis eum.
             <br><br>
