Second attempt at content.

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "en-nz"
-title = "Split Light Glass Co"
+title = "Split Light Glass Studio"
 theme = "vex-hugo-extended"
 
 # CSS Plugins
