--- a/config.toml
+++ b/config.toml
@@ -36,13 +36,13 @@ URL = "contact"
 weight = 2
 
 [[menu.footer]]
-name = "Contact"
-URL = "contact"
+name = "Home"
+URL = "/"
 weight = 1
 
 [[menu.footer]]
-name = "Terms & Conditions"
-URL = "terms-conditions"
+name = "Contact"
+URL = "contact"
 weight = 2
 
 
