--- a/data/en/homepage.yaml
+++ b/data/en/homepage.yaml
@@ -18,9 +18,9 @@ features:
   # feature at the left of the image
   left_side:
     # feature item loop
-  - title : "Custom Design "
+  - title : "Custom design"
     icon : " tf-pencil2"
-    content : "Full Design Service available for either traditional and contemporary patterns can be drawn to suit what you want."
+    content : "Full Design Service available for either traditional and contemporary patterns can be drawn to suit your preferences."
     
     # feature item loop
   - title : "Restoration and repair"
@@ -28,7 +28,7 @@ features:
     content : "We also restore and repair existing windows to a high standard."
     
     # feature item loop
-  - title : "Easy Pricing"
+  - title : "Easy pricing"
     icon : " tf-ion-ios-pricetag-outline"
     content : "To suit your needs. A 50 % deposit is required upon acceptance with terms to complete the balance upon arrangement. Progress photos of the build will be sent to you."
 
@@ -46,9 +46,9 @@ features:
     content : "In almost all cases your window will be unique to your home."
 
     # feature item loop
-  - title : "Final important point"
+  - title : "Design recreation"
     icon : "tf-lightbulb"
-    content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?"
+    content : "We can work from an existing window. If you require a design based on an existing window we encourage you to add a change so that an exact copy is avoided."
 
 
 ############################# promo ############################
