Remove bespoke. Add phone.

--- a/data/en/homepage.yaml
+++ b/data/en/homepage.yaml
@@ -2,7 +2,7 @@
 banner:
   enable : true
   title : "The Split Light Glass Studio."
-  content : "In the beautiful North Island of New Zealand, we solely concentrate on producing bespoke lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
+  content : "In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
   image : "images/logan-cameron-vrr-nnei4pE-unsplash.jpg"
   button:
    enable : true
@@ -12,7 +12,7 @@ banner:
 ############################# Feature ############################
 features:
   enable : true
-  title : "Bespoke leadlight glass design"
+  title : "Leadlight glass design"
   image : "images/IMG_20201126_154235.jpg"
 
   # feature at the left of the image
@@ -56,6 +56,6 @@ promo:
   enable : true
   image : "images/kimberly-eschenbauch-03Eu7zSySPo-unsplash.jpg"
   title : "Artisan stained glass window design."
-  content : "In the beautiful North Island of New Zealand, we solely concentrate on producing bespoke lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
+  content : "In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
 
 
