--- a/data/en/homepage.yaml
+++ b/data/en/homepage.yaml
@@ -3,7 +3,7 @@ banner:
   enable : true
   title : "The Split Light Glass Studio."
   content : "In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
-  image : "images/logan-cameron-vrr-nnei4pE-unsplash.jpg"
+  image : "images/jen1.jpg"
   button:
    enable : true
    label : "Contact Us"
@@ -13,7 +13,7 @@ banner:
 features:
   enable : true
   title : "Leadlight glass design"
-  image : "images/IMG_20201126_154235.jpg"
+  image : "images/sid2.jpg"
 
   # feature at the left of the image
   left_side:
@@ -54,7 +54,7 @@ features:
 ############################# promo ############################
 promo:
   enable : true
-  image : "images/kimberly-eschenbauch-03Eu7zSySPo-unsplash.jpg"
+  image : "images/sid1.jpg"
   title : "Artisan stained glass window design."
   content : "In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
 
