add featured image slider

--- a/data/en/homepage.yaml
+++ b/data/en/homepage.yaml
@@ -9,18 +9,17 @@ banner:
    label : "Contact Us"
    link : "contact"
 
-############################# Featured images ############################
-
-featuredimages:
-  enable : true
-  title : "this is the title"
-
 
 ############################# Feature ############################
 features:
   enable : true
   title : "Leadlight glass design"
   image : "images/sid2.jpg"
+  images:
+  - "images/featured/1.JPG"
+  - "images/featured/2.JPG"
+  - "images/featured/3.JPG"
+  - "images/featured/4.JPG"
 
   # feature at the left of the image
   left_side:
@@ -60,10 +59,6 @@ features:
 ############################# promo ############################
 promo:
   enable: true
-  images:
-  - "images/featured/1.JPG"
-  - "images/featured/2.JPG"
-  - "images/featured/3.JPG"
-  - "images/featured/4.JPG"
+  image : "images/kimberly-eschenbauch-03Eu7zSySPo-unsplash.jpg"
   title : "Artisan stained glass window design."
   content : "In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience."
