--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "en-nz"
-title = "Split Light Glass Studio"
+title = "Split Light Glass Studio New Zealand"
 theme = "vex-hugo-modified"
 
 enableRobotsTXT = true
